--- a/Feedback-plugin/index.html
+++ b/Feedback-plugin/index.html
@@ -32,6 +32,10 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+            <div>
+                <button onclick="app.getSystemInfo()">Get System Info</button>
+                <button onclick="app.getScreenshot()">Get Screenshot</button>
+            </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
